--- a/src/main/java/uc15/pi_pdvcongelados/gui/TelaListaTotalVendas.form
+++ b/src/main/java/uc15/pi_pdvcongelados/gui/TelaListaTotalVendas.form
@@ -61,7 +61,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="lblPrecoCusto4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="txtPrecoCusto2" min="-2" pref="160" max="-2" attributes="0"/>
+                          <Component id="txtValorTotal" min="-2" pref="160" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="27" max="32767" attributes="0"/>
@@ -87,7 +87,7 @@
                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblPrecoCusto4" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtPrecoCusto2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtValorTotal" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
@@ -117,7 +117,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="tblVendas">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="5" rowCount="0">
@@ -140,7 +140,7 @@
             <Property name="text" type="java.lang.String" value="Total (R$)"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtPrecoCusto2">
+        <Component class="javax.swing.JTextField" name="txtValorTotal">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="0"/>
