--- a/src/main/java/uc15/pi_pdvcongelados/gui/TelaListaTotalVendas.form
+++ b/src/main/java/uc15/pi_pdvcongelados/gui/TelaListaTotalVendas.form
@@ -120,7 +120,8 @@
             <Component class="javax.swing.JTable" name="tblVendas">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="0">
+                  <Table columnCount="6" rowCount="0">
+                    <Column editable="true" title="ID" type="java.lang.Object"/>
                     <Column editable="true" title="ID venda" type="java.lang.Object"/>
                     <Column editable="true" title="Produto" type="java.lang.Object"/>
                     <Column editable="true" title="Quantidade" type="java.lang.Object"/>
